force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/FEC_Data_Integration_Mapping_Info__c.object-meta.xml
<CustomObject>
    <label>FEC Data Integration Mapping Info</label>
    <nameField>
        <label>FEC Data Integration Mapping Infos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Data Integration Mapping Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>