force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_Auto_Mapping_Property__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Mapping_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Mapping Property</label>
    <type>Checkbox</type>
</CustomField>