force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_Auto_Mapping_Property_Source__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Mapping_Property_Source__c</fullName>
    <label>FEC Auto Mapping Property Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>