force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_CSM_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_CSM_Property_Type__c</fullName>
    <label>CSM Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>