force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_Data_Integration_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FEC_Data_Integration_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC Data Integration Mapping</label>
    <referenceTo>FEC_Data_Integration_Mapping__c</referenceTo>
    <relationshipLabel>FEC Data Integration Mapping Infos</relationshipLabel>
    <relationshipName>FEC_Data_Integration_Mapping_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>