force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_Integrating_Property__c.field-meta.xml
<CustomField>
    <fullName>FEC_Integrating_Property__c</fullName>
    <label>Integrating Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>