force-app/main/default/objects/FEC_Data_Integration_Mapping_Info__c/fields/FEC_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>